# cpp_project

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  questionbank.md  video_outline.md  video_outline.md.tmp.24684.f6633c5d0b5e
src/: main.cpp
src/core/: board.cpp  board.h  config.h  dice.cpp  dice.h  effectcard.cpp  effectcard.h  game.cpp  game.h  knowledgebank.cpp  knowledgebank.h  player.cpp  player.h  questionbank.cpp  questionbank.h  tile.cpp  tile.h
src/ui/: boardwidget.cpp  boardwidget.cpp.tmp.32400.83714f0e6b93  boardwidget.h  dicewidget.cpp  dicewidget.h  eventlog.cpp  eventlog.h  mainwindow.cpp  mainwindow.h  playerpanel.cpp  playerpanel.h
